# noda-interview

./: .gitignore  .gitlab-ci.yml  404.html  Cargo.toml  GIT_WORKFLOW.md  INPUT_DATA_SPOOFING.md  METRICS.md  README.md  code-structure.html  development.html  git-workflow.html  input-data-spoofing.html  input-formats.html  introduction.html  performance-and-profiling.html  pipeline-architecture.html  print.html  publishing-checklist.html  quick-start.html  runtime-metrics.html  searcher-c2a407aa.js  searchindex-2bfc4aaa.js  sqlite-output.html  toc-3ae58493.js  toc.html
.github/workflows/: pages.yml
docs/: book.toml
docs/src/: SUMMARY.md  code-structure.md  development.md  git-workflow.md  input-data-spoofing.md  input-formats.md  introduction.md  observability.md  performance-and-profiling.md  pipeline-architecture.md  publishing-checklist.md  quick-start.md  runtime-metrics.md  sqlite-output.md
examples/: data_generator.py
scripts/: ci_performance.sh  profile.sh  scale_benchmark.sh
src/: cli.rs  db.rs  event_log.rs  input.rs  lib.rs  main.rs  metrics.rs  model.rs  transform.rs
tests/: integration.rs  library_api.rs
