[package]
name = "noda-interview"
version = "0.1.0"
edition = "2024"
authors = ["Raynhardt van Zyl"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["std"] }
rusqlite = { version = "0.39", features = ["bundled"] }

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
predicates = "3"

[profile.profiling]
inherits = "release"
debug = "line-tables-only"
